
	* Add a function to retrieve raw signature.

2009-01-30  Cedric BAIL

	* Fix a corrupted pointer use in eet_cipher.c

2009-02-09  Chidambar Zinnoury

	* Add some missing __UNUSED__ flags.

2009-02-26  Luis Felipe Strano Moraes

	* Fix problem reported by llvm

2009-03-09  Cedric BAIL

	* Add sha1 retrieval for an Eet_File.

2009-03-17  Gustavo Sverzut Barbieri

	* Force fsync() after data is written to file, solve ext4 issues.

2009-03-18  Carsten Haitzler (The Rasterman)

	* Disable fsync. Edit the code if you need it.

2009-03-19  Cedric BAIL

	* Make eet_data thread safe.

2009-03-25  Cedric BAIL

	* Fix eet pkg-config dependencies.
	* Fix double init of gcry.

2009-04-22  Carsten Haitzler (The Rasterman)

	* Release eet 1.2.0

2009-05-18  Cedric BAIL

	* Cleanup Eet_Data code.

2009-06-02  Cedric BAIL

	* Make eet_node API usable.

2009-06-14  Carsten Haitzler (The Rasterman)

	* Release eet 1.2.1

2009-07-08  Cedric BAIL

	* Reorder gcry init to be used during gnutls init.

2009-07-11  Hanspeter Portner

	* Improve docs/examples in Eet.h

2009-07-23  Cedric BAIL

	* Fix init on system without SECMEM.

2009-07-29  Carsten Haitzler (The Rasterman)

        * Release eet 1.2.2

2009-08-13  Cedric BAIL

	* Deprecating eet_data_descriptor*_new.
	* Add eet_data_descriptor_stream_new and eet_data_descriptor_file_new.
	* Add eina helper.
	* Cleanup Eet_Data_Descriptor code.

2009-08-16  Carsten Haitzler (The Rasterman)

	* Fix eet data encode to encode empty structs etc. so save saves
          something as opposed to nothing

2009-08-16  Carsten Haitzler (The Rasterman)

	* Fix documentation of eet_data_write() and eet_write() for return
          value to return # of bytes written, not 1 or 0

2009-08-16  Vincent Torri

	* Fix build with suncc (missing alloca() declaration in eet_cipher.c)

2009-09-15  Mathieu Taillefumier

	* Use new Eina_Log infrastructure to report error.

2009-09-15  Cedric BAIL

	* Remove apparently useless eet_freeleak_* from eet_data.