@@ -5,6 +5,18 @@
 #ifndef _EET_PRIVATE_H
 #define _EET_PRIVATE_H
 
+#include <Eina.h>
+
+typedef enum _Eet_Convert_Type Eet_Convert_Type;
+
+enum _Eet_Convert_Type
+{
+  EET_D_NOT_CONVERTED,
+  EET_D_FLOAT,
+  EET_D_DOUBLE,
+  EET_D_FIXED_POINT
+};
+
 typedef struct _Eet_String              Eet_String;
 
 struct _Eet_String
@@ -22,13 +34,10 @@ struct _Eet_String
   {
     float                f;
     double               d;
+    Eina_F32p32		 fp;
   } convert;
 
-  struct
-  {
-    unsigned int         converted : 1;
-    unsigned int         is_float : 1;
-  } flags;
+  Eet_Convert_Type	 type;
 };
 struct _Eet_Dictionary
 {
@@ -149,8 +158,9 @@ void             eet_dictionary_free(Eet_Dictionary *ed);
 int              eet_dictionary_string_add(Eet_Dictionary *ed, const char *string);
 int              eet_dictionary_string_get_size(const Eet_Dictionary *ed, int index);
 const char      *eet_dictionary_string_get_char(const Eet_Dictionary *ed, int index);
-int              eet_dictionary_string_get_float(const Eet_Dictionary *ed, int index, float *result);
-int              eet_dictionary_string_get_double(const Eet_Dictionary *ed, int index, double *result);
+Eina_Bool        eet_dictionary_string_get_float(const Eet_Dictionary *ed, int index, float *result);
+Eina_Bool        eet_dictionary_string_get_double(const Eet_Dictionary *ed, int index, double *result);
+Eina_Bool        eet_dictionary_string_get_fp(const Eet_Dictionary *ed, int index, Eina_F32p32 *result);
 int              eet_dictionary_string_get_hash(const Eet_Dictionary *ed, int index);
 
 int   _eet_hash_gen(const char *key, int hash_size);
